--- a/QuanLiHocTap/Main.Master
+++ b/QuanLiHocTap/Main.Master
@@ -11,43 +11,33 @@
     </asp:ContentPlaceHolder>
     <style type="text/css">
         .auto-style1 {
-            width: 81%;
+            width: 100%;
+            height: 100%;
         }
         .auto-style3 {
             height: 35px;
         }
         .auto-style16 {
-            height: 149px;
-            width: 118px;
+            height: 87px;
+            width: 100%;
+            background-color: #CCCCCC;
         }
         .auto-style17 {
-            width: 546px;
-        }
+            height: 28px;
+            background-color: #CCCCCC;
+            }
         .auto-style18 {
             height: 26px;
-            width: 546px;
-        }
-        .auto-style19 {
-            height: 30px;
-            width: 1429px;
+            background-color: 
         }
         .auto-style20 {
             height: 137px;
-            width: 1429px;
+            width: 908px;
         }
-        .auto-style12 {
-            height: 137px;
-        }
-        .auto-style14 {
-            height: 182px;
-            width: 25px;
-        }
-        .auto-style13 {
-            height: 137px;
-            width: 191px;
-        }
-        .auto-style6 {
-            height: 60px;
+        .auto-style21 {
+            height: 28px;
+            background-color: #777;
+            width: 20%;
         }
         </style>
 </head>
@@ -58,15 +48,14 @@
         <table class="auto-style1">
             <tr>
                 <td class="auto-style16" colspan="2">
-                    &nbsp;</td>
+                    <asp:Image ID="Image1" runat="server" Height="112px" ImageUrl="~/Image/banner.png" Width="805px" />
+                    </td>
             </tr>
             <tr>
-                <td class="auto-style17"></td>
-                <td class="auto-style19">
-                    &nbsp;&nbsp;&nbsp;&nbsp;
+                <td class="auto-style21"></td>
+                <td class="auto-style17">
                     <uc1:DangNhap ID="DangNhap" runat="server" />
                 </td>
-                <td></td>
             </tr>
             <tr>
                 <td class="auto-style18">
@@ -77,7 +66,6 @@
                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                     </asp:ContentPlaceHolder>
                 </td>
-                <td></td>
             </tr>
             <tr>
                 <td class="auto-style3" colspan="2"></td>
